--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -382,7 +382,7 @@ Uploads photo of specified image file path to the 2nd person in the address book
 === Clearing all entries : `clear`
 
 In case, you want to clear all the contact on your list. You may do so with the clear function. +
-[TIP]
+[WARNING]
 It is advised that you should do a backup copy of your contact list before using this command. As it would wipe out all the contact information in the application.
 
 Format: `clear` or `c`
@@ -399,7 +399,7 @@ There is no need to save manually.
 
 If you happen to realise that you committed a mistake after closing the application. Where the function of undo or redo is not valid to use, you can take advantage of our backend logging function that keeps track of all actions done by you in forms of '.txt' file. It includes information of important actions as well as timestamp for each actions done. This command allows you to clear the logfile which you might want to do so to keep the logfile neat and organised. +
 Format: 'clearlog' or 'cl'
-[NOTE]
+[WARNING]
 All important actions made by the user such as add,clear,edit,delete,import,list,redo,undo and starting of application +
 are recorded in the ConnectUs.txt logfile. Users have the option of clearing the logfile in order to make the log more+
 organised. +
