--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -369,7 +369,8 @@ The `redo` command fails as there are no `undo` commands executed previously.
 Redo commands are _undoable_ with the `undo` command.
 ====
 
-=== `remark` or `note` or `rmk`: Adding a Remark _(Coming in V2.0)_
+// tag::remark[]
+=== `remark`, `rmk`, `note` or `comment` : Adding a Remark _(Since v1.4)_
 
 Adds a remark to the specified person in Rolodex. +
 Format: `remark INDEX [r/REMARK]` or `remark INDEX [r/REMARK]`
@@ -387,6 +388,13 @@ Examples:
 Sets the remark of the 1st person to `Likes fishing`.
 * `note 1 r/` +
 Removes the remark for the 1st person.
+
+[TIP]
+====
+* Remarks can also be added using the `add` command, and modified with the `edit` command.
+* Remark commands are _undoable_ with the `undo` command.
+====
+// end::remark[]
 
 === Saving the Data _(Since v1.0)_
 
