--- a/docs/team/derrickchua.adoc
+++ b/docs/team/derrickchua.adoc
@@ -3,8 +3,8 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 :imagesDir: ../images
 :stylesDir: ../stylesheets
 
-== Project: AddressBook - Level 4
-AddressBook - Level 4 is a desktop address book application used for teaching Software Engineering principles. The user interacts with it using a CLI, and it has a GUI created with JavaFX. It is written in Java, and has about 6 kLoC.
+== Project: ABC Business Contacts
+ABC Business Contacts is a desktop address book application used for teaching Software Engineering principles. The user interacts with it using a CLI, and it has a GUI created with JavaFX. It is written in Java, and has about 6 kLoC.
 
 *Code contributed*: [https://github.com/CS2103AUG2017-W13-B3/main/blob/master/collated/main/derrickchua.md[Functional code]] [https://github.com/CS2103AUG2017-W13-B3/main/blob/master/collated/test/derrickchua.md[Test code]] {give links to collated code files}
 
