--- a/docs/team/derrickchua.adoc
+++ b/docs/team/derrickchua.adoc
@@ -4,7 +4,7 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 :stylesDir: ../stylesheets
 
 == Project: ABC Business Contacts
-ABC Business Contacts is a desktop address book application used for teaching Software Engineering principles. The user interacts with it using a CLI, and it has a GUI created with JavaFX. It is written in Java, and has about 6 kLoC.
+ABC Business Contacts is a desktop address book application used for teaching Software Engineering principles. The user interacts with it using a CLI, and it has a GUI created with JavaFX. It is written in Java.
 
 *Code contributed*: [https://github.com/CS2103AUG2017-W13-B3/main/blob/master/collated/main/derrickchua.md[Functional code]] [https://github.com/CS2103AUG2017-W13-B3/main/blob/master/collated/test/derrickchua.md[Test code]] {give links to collated code files}
 
