Update description, name of project

--- a/README.adoc
+++ b/README.adoc
@@ -13,7 +13,7 @@ ifndef::env-github[]
 image::images/Ui.png[width="600"]
 endif::[]
 
-* ABC Business Contact(ABC) is a desktop Business Contact Management application. It has a GUI but most of the user interactions happen using a CLI (Command Line Interface).
+* ABC Business Contacts(ABC) is a desktop Business Contact Management application. It has a GUI but most of the user interactions happen using a CLI (Command Line Interface).
 * ABC's target audience are businessmen who maintain a huge collection of contacts and frequently attend appointments with different people. They have the need to efficiently locate a particular contact and keep track of their appointments.
 * It is developed based on the AddressBook-Level4 project created by SE-EDU initiative at `https://github.com/se-edu/`
 
