--- a/docs/team/derrickchua.adoc
+++ b/docs/team/derrickchua.adoc
@@ -6,7 +6,7 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 == Project: ABC Business Contacts
 ABC Business Contact(ABC) is a desktop Business Contact Management application. The user interacts with it using a CLI, and it has a GUI created with JavaFX. It is written in Java.
 
-*Code contributed*: [https://github.com/CS2103AUG2017-W13-B3/main/blob/master/collated/main/derrickchua.md[Functional code]] [https://github.com/CS2103AUG2017-W13-B3/main/blob/master/collated/test/derrickchua.md[Test code]] {give links to collated code files}
+*Code contributed*: [https://github.com/CS2103AUG2017-W13-B3/main/blob/master/collated/main/derrickchua.md[Functional code]] [https://github.com/CS2103AUG2017-W13-B3/main/blob/master/collated/test/derrickchua.md[Test code]]
 
 === Enhancement Added: Sync
 
