--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -344,33 +344,40 @@ Color name input can be in english or hexadecimal form.
 // tag::appointment[]
 === Set appointment: `appointment`
 
-You can set an appointment to a specific contact at a given index. +
+You can add, sort and remove appointments from a specific contact at a given index. +
+
+Appointment can be set using natural language. +
+You can refer to the following http://natty.joestelmach.com/doc.jsp[link] for the supported formats. +
 
 [NOTE]
-Appointment can be set using natural language. +
-If no end time is specified, default appointment time is 1 hour.
-However, please include at least the hour and a day that can be specified.
+If no end time is specified, default appointment time is 1 hour. +
+However, please include at least the hour and a day that can be specified. +
 
+[WARNING]
+You can only set dates that are after current time. (i.e. You cannot set a time to yesterday) +
 
-*Format:* `appointment INDEX d/TIME to TIME` +
-*Shorthand format:* `appt INDEX d/TIME to TIME` +
+[width="59%",cols="<23%,<25%,<30%",options="header",]
+|=======================================================================
+|Purpose |Format |Example
 
-*Example:* appt 1 d/5pm to 7pm tomorrow
+|Add an appointment to the contact |`appointment INDEX d/TIME to TIME` |`appointment 1 d/tomorrow 5pm`
+
+|Shorthand for adding appointment  |`appt INDEX d/TIME to TIME` |`appt 1 d/tomorrow 5pm`
+
+|Remove an appointment from the contact |`appointment INDEX d/off`| `appointment 1 d/off`
+
+|Shorthand for removing appointment |`appt INDEX d/off`| `appt 1 d/off`
+
+|Sort list by appointment dates |`appointment` |`appointment`
+
+|Shorthand for appointment sorting |`appt` |`appt`
+
+|=======================================================================
+
+*Example:*
 
 image::aptexample.png[width="500"]
     Figure 11: Appointment Command Usage Diagram
-
-You can sort list by appointment dates. +
-*Format:* `appointment` +
-*Shorthand format:* `appt`
-
-[NOTE]
-You can only set dates that are after current time. (i.e. You cannot set a time to yesterday) +
-
-To remove appointment,
-
-*Format:* `appointment INDEX d/off` +
-*Shorthand format:* `appt INDEX d/off`
 
 // end::appointment[]
 
