--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -189,6 +189,7 @@ Selects the 2nd person in the address book.
 `select 1` +
 Selects the 1st person in the results of the `find` command.
 
+// tag::addli[]
 === Adding a Life Insurance: `addli`
 `since v1.4`
 
@@ -203,6 +204,7 @@ Examples:
 * `addli n/Whole Life o/Bernice Yu i/David Li b/Roy Balakrishnan c/WholeLife.pdf
             pr/8500 sd/01 11 2017 ed/01 11 2117`
 
+// end::addli[]
 === Listing entered commands : `history`
 
 Lists all the commands that you have entered in reverse chronological order. +
