--- a/docs/team/oscarwang.adoc
+++ b/docs/team/oscarwang.adoc
@@ -16,6 +16,7 @@ LISA: Levels Integrated Secretarial Agent is a desktop address book application 
 #Start of Extract [from: User Guide]#
 
 include::../UserGuide.adoc[tag=add]
+include::../UserGuide.adoc[tag=addli]
 
 #End of Extract#
 
@@ -31,13 +32,13 @@ include::../UserGuide.adoc[tag=add]
 #Start of Extract [from: Developer Guide]#
 
 include::../DeveloperGuide.adoc[tag=add]
+include::../DeveloperGuide.adoc[tag=addli]
 
 #End of Extract#
 
 ---
 
 === Enhancement Proposed:
-
 
 === Other contributions
 
